overflow bug fixed

--- a/css/_global.less
+++ b/css/_global.less
@@ -98,6 +98,10 @@ body {
   position: relative;
 }
 
+.ov-hidden {
+  overflow: hidden;
+}
+
 .invisible {
   opacity: 0;
   visibility: hidden;
